# Meta-Hack-Emergency-Triage-ENV

./: Dockerfile  README.md  grader.py  inference.py  main.py  openenv.yaml  outcome_simulator.py  patient_generator.py  pyproject.toml  requirements.txt  run_inference.bat  validate.py
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
