[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "emergency-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible ER triage environment for LLM agent evaluation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "scipy>=1.12.0",
    "openai>=1.14.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[project.urls]
Repository = "https://github.com/deepakm0003/Meta-Hack-Emergency-Triage-ENV"
Space = "https://huggingface.co/spaces/deepak0003/Meta-Hack"
